[gd_scene load_steps=11 format=2]

[ext_resource path="res://MainScene/BG/Parallax/Parallax.tscn" type="PackedScene" id=1]
[ext_resource path="res://GUI/HUD/HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://Actors/Rex/Rex.tscn" type="PackedScene" id=3]
[ext_resource path="res://Audio/Sounds/Colision.wav" type="AudioStream" id=8]
[ext_resource path="res://MainScene/MainScene.gd" type="Script" id=11]
[ext_resource path="res://MainScene/NightShader/NightShader.tscn" type="PackedScene" id=12]
[ext_resource path="res://Shaders/ToneMapping/gradient1.tres" type="Texture" id=13]
[ext_resource path="res://Shaders/ToneMapping/ToneMapping.gdshader" type="Shader" id=14]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 800, 32 )

[sub_resource type="ShaderMaterial" id=8]
resource_local_to_scene = true
shader = ExtResource( 14 )
shader_param/mix_amount = 0.0
shader_param/gradient = ExtResource( 13 )

[node name="MainScene" type="Node2D"]
script = ExtResource( 11 )
__meta__ = {
"_edit_horizontal_guides_": [ 533.0, 309.0 ]
}

[node name="Parallax" parent="." instance=ExtResource( 1 )]

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( 0, 533 )
collision_layer = 2
__meta__ = {
"_edit_group_": true
}

[node name="Col" type="CollisionShape2D" parent="Floor"]
position = Vector2( 640, 32 )
shape = SubResource( 4 )

[node name="Rex" parent="." instance=ExtResource( 3 )]
position = Vector2( 226, 486 )
__meta__ = {
"_edit_group_": true
}

[node name="CloudSpawnPoint" type="Position2D" parent="."]
position = Vector2( 1435, 300 )

[node name="EnemySpawPoint" type="Position2D" parent="."]
position = Vector2( 1318, 532 )

[node name="SpawnTimer" type="Timer" parent="."]

[node name="ScoreTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="NightTimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource( 2 )]

[node name="Tween" type="Tween" parent="."]

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="NightShader" parent="." instance=ExtResource( 12 )]
material = SubResource( 8 )

[connection signal="game_over" from="Rex" to="." method="game_over"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
